<resources>
    <string name="app_name">BMSCE Results</string>
    <string name="title">Application Form</string>
    <string name="title2">Recount Form</string>
    <string name="title3">Challenge Reval Form</string>
    <string name="title4">Photocopy Form</string>
    <string name="exam">Exam-type:</string>
    <string name="action_settings">Settings</string>
    <string name="radio_SEE">SEE</string>
    <string name="radio_MAKE">MAKE-UP</string>
    <string name="radio_SUPP">SUPPLEMENTARY</string>
    <string name="usn">USN:</string>
    <string name="name">Name:</string>
    <string name="num">No. of Courses applied:</string>
    <string name="tfee">Total Fees:</string>
    <string name="slno">Sl.no.  </string>
    <string name="sem">Sem  </string>
    <string name="cc">Course Code  </string>
    <string name="ct">Course Title  </string>
    <string name="grade">Grade  </string>
    <string name="fee">Fee Paid</string>
    <string name="date">Date:</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_verify">Verify</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="subject_code">Subject</string>
    <string name="internal">CIE</string>
    <string name="external">SEE</string>
    <string name="total">Total</string>
    <string-array name="semarray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="deparray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="sems">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
    </string-array>
    <string name="title_activity_scrolling2">ScrollingActivity2</string>
    <string name="about_us">
       "Vision\n\n"
"Promoting Prosperity of mankind by augmenting Human Resource Capital through Quality Technical Education &amp; Training.\n\n"
        "Mission\n\n"
"Accomplish Excellence in the field of Technical Education through Education, Research and Service needs of society.\n\n"

        "B.M.S. College of Engineering (BMSCE) was Founded in the year 1946 by Late Sri. B. M. Sreenivasaiah a great visionary and philanthropist and nurtured by his illustrious son Late Sri. B. S. Narayan.\n\n"

"Location &amp; Area : Located in the heart of Bangalore, the Garden City of India, BMSCE is about 5 KMs from the Central Railway Station. The campus area is 11 Acres 30 Guntas with a built up area of 99,500 Sq.M..\n\n"

BMSCE is the first private sector initiative in engineering education in India. Over the past 73 years of its illustrious existence, the institution has produced more than 40,000 engineers/leaders who have enriched the world through their immense contributions for mankind.
        Started with only 03 undergraduate courses, BMSCE today offers 13 Undergraduate &amp; 16 Postgraduate courses both in conventional and emerging areas. 14 of its Departments are recognized as Research Centers offering PhD/M.Sc (Engineering by Research) degrees in Science, Engineering and Management.
        The College has been effectively practicing outcome based education. The College has one of the largest student populations amongst engineering colleges in Karnataka. Currently about 5000 students are pursuing their higher studies in BMSCE. More than 350 research scholars are pursuing their PhD Degree in BMSCE Research Centres. BMSCE is one of the most preferred destinations for the students from across the country which could be attributed to the quality education, infrastructure, healthy teaching-learning practices as well as producing industry ready students. The College strives to develop technical, professional skills and individual values in its students that help to create foundation for their success. Speaking about faculty, the college has always attracted the cream of the crop. Its current team of faculty is no different. They are well qualified, meritorious, experienced and highly dedicated. The classrooms and labs of the college are best-in-class, well equipped and sophisticated. The labs are regularly upgraded in order to stay advanced. The campus is Wi-Fi enabled with 24x7 internet facilities in the departments and hostels. The college results and placement record bear testimony to the high standard of education provided by the institution. The institution has strong linkages and collaborations with reputed national and international institutes/organizations to nourish academic, research and innovation. The academic performance of the students has been exceptional, more than 90% of the students secure first class/distinction. The institution has an excellent Placement and Training Centre. More than 200 reputed Core/IT/MNC companies visit the campus every year recruiting students from various branches. More than the 90% of the eligible students get placed every year. The institution is consistently ranked amongst the best engineering institutes in the country.


    </string>
    <string name="faq">
        "Q1. How to view results?\n"
        "A: Enter the USN, select sem and department in the given fields and click the View Results button. The results can be seen if the COE office has uploaded the results in database. Otherwise a blank table appears.\n\n"

        "Q2: How to apply for Revaluation, Recounting,Photocopy and Challenge Revaluation?\n"
        "A: Navigate to the Apply Forms section through the bottom navigation bar. There are four buttons, each representing the type of application. Click on the respective buttons to get a corresponding form.\n\n"

        "Q3: Do we have to make a payment to apply for Revaluation and others?\n"
        "A: Yes, the amount to be paid is specified in the total fees field of the forms when the number of courses field is filled. Each type of application has different fees to be paid according to the type of application, for example fees for Revals is Rs.1000 per subject, for Recounting it is Rs.100 per subject and so on. The prices maybe be revised in future.\n\n"

        "Q4: Is there any online mode of payment provided?\n"
        "A: Yes, the app includes the payment using UPI. There should be any app that uses upi_id for online transaction installed in your mobile.
        It can be GPay, PhonePay or PayTm.The forms have a button named "pay using upi", on clicking that you can choose any app mentioned above to do the required payment.\n\n"

        "For other queries, you can contact us through the contact details provided in the 'Contact Us' section of the app\n\n"

    </string>
    <string name="title_activity_scrolling3">ScrollingActivity3</string>
    <string name="title_activity_scrolling4">ScrollingActivity4</string>
    <string name="title_activity_about_us">About_us</string>
    <string name="title_activity_help">Help</string>
</resources>