<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30sp"
            android:paddingTop="30sp"
            android:text="@string/exam"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioSee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_SEE" />

            <RadioButton
                android:id="@+id/radioMakeUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_MAKE" />

            <RadioButton
                android:id="@+id/radioSupp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_SUPP" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exam"
            android:maxLength="10"
            android:paddingLeft="30sp"
            android:paddingTop="10sp"
            android:text="@string/usn"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exam"
            android:layout_marginLeft="30sp"
            android:layout_toEndOf="@id/textView2"
            android:layout_toRightOf="@id/textView2"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:paddingLeft="30sp"
            android:paddingTop="10sp"
            android:text="@string/name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="50sp"
            android:layout_toEndOf="@id/textView"
            android:layout_toRightOf="@id/textView"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:paddingLeft="30sp"
            android:paddingTop="15sp"
            android:text="@string/num"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText2"
            android:layout_marginLeft="15sp"
            android:layout_toEndOf="@id/textView4"
            android:layout_toRightOf="@id/textView4"
            android:inputType="numberSigned"
            android:maxLength="2" />

        <TextView
            android:id="@+id/sem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText3"
            android:paddingLeft="30sp"
            android:paddingTop="15sp"
            android:text="@string/sem"
            android:textSize="20sp" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="125sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText3"
            android:layout_marginLeft="30sp"
            android:layout_toEndOf="@id/sem"
            android:layout_toRightOf="@id/sem" />



        <TableLayout
            android:id="@+id/courses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/sem"
            android:paddingLeft="30sp"
            android:paddingTop="20sp"
            android:textSize="20sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slno"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:text="@string/cc"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:text="@string/ct"
                    android:textSize="20sp" />

            </TableRow>


        </TableLayout>



        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:paddingLeft="30sp"
            android:paddingTop="15sp"
            android:text="@string/tfee"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:layout_toEndOf="@id/textView11"
            android:layout_toRightOf="@id/textView11"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView11"
            android:paddingLeft="30sp"
            android:paddingTop="15sp"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView12"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:layout_toEndOf="@id/textView13"
            android:layout_toRightOf="@id/textView13"
            android:textSize="20sp" />

        <Button
            android:id="@+id/pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView13"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="20sp"
            android:background="#374ECD"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="Pay by UPI"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <!--<ImageButton
            android:id="@+id/searchImageButton"
            android:layout_width="254dp"
            android:layout_height="110dp"
            android:contentDescription="Pay using UPI"
            android:src="@drawable/pay-button2" />-->

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:onClick="submitReval"
            android:paddingLeft="20sp"
            android:paddingTop="15sp"
            android:paddingRight="20sp"
            android:paddingBottom="15sp"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textStyle="bold" />



    </RelativeLayout>
</androidx.core.widget.NestedScrollView>